liveness.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-exec-pod
  labels:
    name: liveness-exec-pod
spec:
  containers:
  - name: liveness-exec-pod
    image: busybox
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    command:
      - "/bin/sh"
      - "-c"
      - "touch /tmp/healthy; sleep 60; rm -rf /tmp/healthy; sleep 3600"
    livenessProbe:
      exec:
        command: ["test", "-e", "/tmp/healthy"]
      initialDelaySeconds: 1
      periodSeconds: 3
  restartPolicy: Never
