mysql-cm-pvc.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-cm-pvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-cm-pvc
  template:
    metadata:
      labels:
        app: mysql-cm-pvc
    spec:
      containers:
      - name: mysql-cm-pvc
        image: mysql
        volumeMounts:
            # 以数据卷的形式挂载 MySQL 配置文件目录
            - name: mysql-cm-config-vol
              mountPath: /etc/mysql/conf.d
            - name: nfs-pvc-mysql-vol
              mountPath: /var/lib/mysql
        resources:
          limits:
            memory: "512Mi"
            cpu: "100m"
        ports:
        - containerPort: 3306
      volumes:
        # 将 ConfigMap 中的内容以文件形式挂载进数据卷
        - name: mysql-cm-config-vol
          configMap:
            name: mysql-cm-config
            items:
                # ConfigMap 中的 Key
              - key: mysqld.cnf
                # ConfigMap Key 匹配的 Value 写入名为 mysqld.cnf 的文件中
                path: mysqld.cnf
        - name: nfs-pvc-mysql-vol
          persistentVolumeClaim:
            claimName: nfs-pvc-mysql
      


# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: mysql-cm-pvc
# spec:
#   ports:
#     - port: 3306
#       targetPort: 3306
#       nodePort: 32036
#   type: LoadBalancer
#   selector:
#     name: mysql-cm-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: mysql-cm-pvc-svc
spec:
  selector:
    app: mysql-cm-pvc
  type: NodePort
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 30306
