nginx-ingress-test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nginx-ingress-test
  # namespace: foo
spec:
  rules:
    - host: nginx-sts-fs.test.lab
      http:
        paths:
          - backend:
              serviceName: nginx-sts-fs
              servicePort: 80
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
      - hosts:
          - nginx-sts-fs.test.lab
        secretName: nginx-sts-fs.test.lab-tls
